# docs/openapi.yml
@@ -30,9 +30,9 @@ paths:
                 name:
                   type: string
                   example: Takanori Ugai
-                senario:
+                scenario:
                   type: string
-                  example: Senario1
+                  example: Scenario1
                 answers:
                   type: array
                   items:
@@ -99,9 +99,9 @@ paths:
                 name:
                   type: string
                   example: Takanori Ugai
-                senario:
+                scenario:
                   type: string
-                  example: Senario1
+                  example: Scenario1
                 answers:
                   type: array
                   items:
@@ -189,9 +189,9 @@ paths:
                 name:
                   type: string
                   example: Takanori Ugai
-                senario:
+                scenario:
                   type: string
-                  example: Senario1
+                  example: Scenario1
                 answers:
                   type: array
                   items:
@@ -273,9 +273,9 @@ paths:
                 name:
                   type: string
                   example: Takanori Ugai
-                senario:
+                scenario:
                   type: string
-                  example: Senario1
+                  example: Scenario1
                 answers:
                   type: array
                   items:
@@ -357,9 +357,9 @@ paths:
                 name:
                   type: string
                   example: Takanori Ugai
-                senario:
+                scenario:
                   type: string
-                  example: Senario1
+                  example: Scenario1
                 answers:
                   type: array
                   items:
@@ -453,9 +453,9 @@ paths:
                 name:
                   type: string
                   example: Takanori Ugai
-                senario:
+                scenario:
                   type: string
-                  example: Senario1
+                  example: Scenario1
                 answers:
                   type: array
                   items:
@@ -537,9 +537,9 @@ paths:
                 name:
                   type: string
                   example: Takanori Ugai
-                senario:
+                scenario:
                   type: string
-                  example: Senario1
+                  example: Scenario1
                 answers:
                   type: array
                   items:
@@ -631,9 +631,9 @@ paths:
                 name:
                   type: string
                   example: Takanori Ugai
-                senario:
+                scenario:
                   type: string
-                  example: Senario1
+                  example: Scenario1
                 answers:
                   type: array
                   items:
@@ -713,13 +713,13 @@ paths:
                     example: null
         '500':
           $ref: '#/components/responses/500Error'
-  /Senario/{id}:
+  /Scenario/{id}:
     get:
       tags:
         - user
-      summary: Get a senario
+      summary: Get a scenario
       description: |
-        Get a senario.
+        Get a scenario.
       parameters:
         - in: path
           name: id
@@ -749,7 +749,7 @@ paths:
                     properties:
                       id:
                         type: string
-                        example: Senario1
+                        example: Scenario1
                       title:
                         type: string
                         example: "Morning Rituals: From Bedtime Stories to Juice Delight"
@@ -789,7 +789,7 @@ paths:
                     example: null
         '500':
           $ref: '#/components/responses/500Error'
-  /Senario/list:
+  /Scenario/list:
     get:
       tags:
         - user
